홈페이지 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -23,44 +23,52 @@
 
     <div id="wrap">
 		<a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.catmergepuzzle">
-            <img class="linkImg" src="images/item17.jpg" /><img class="linkImg" src="images/item18.jpg" />
-        </a>
-	
+            <img class="linkImg" src="images/item17.png" /><img class="linkImg3" src="images/item18.jpg" />
+        </a><br />
+		
         <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.minime">
-            <img class="linkImg" src="images/item1.jpg" /><img class="linkImg" src="images/item2.jpg" />
-        </a>
+            <img class="linkImg" src="images/item1.jpg" /><img class="linkImg3" src="images/item2.jpg" />
+        </a><br />
 
         <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.zombieroom">
-            <img class="linkImg" src="images/item3.jpg" /><img class="linkImg" src="images/item4.jpg" />
-        </a>
+            <img class="linkImg" src="images/item3.jpg" /><img class="linkImg3" src="images/item4.jpg" />
+        </a><br />
 
         <a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.StarlightSeaStreetStall">
             <img class="linkImg" src="images/item5.jpg" /><div class="linksChildWrap">
                 <img class="linkImg2" src="images/item6.jpg" /><img class="linkImg2" src="images/item7.jpg" /><img class="linkImg2" src="images/item8.jpg" />
             </div>
-        </a>
+        </a><br />
 		
 		<a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.UndergroundDungeon">
             <img class="linkImg" src="images/item13.jpg" /><div class="linksChildWrap">
                 <img class="linkImg2" src="images/item14.jpg" /><img class="linkImg2" src="images/item15.jpg" /><img class="linkImg2" src="images/item16.jpg" />
             </div>
-        </a>
+        </a><br />
 
         <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.star_pook">
-            <img class="linkImg" src="images/item9.jpg" />
-        </a>
+            <img class="linkImg4" src="images/item9.jpg" />
+        </a><br />
 
         <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.dalpook">
-            <img class="linkImg" src="images/item10.png" /><img class="linkImg" src="images/item11.png" />
-        </a>
+            <img class="linkImg" src="images/item10.png" /><img class="linkImg3" src="images/item11.png" />
+        </a><br />
 
         <a class="links" href="https://gg-i-dont-know.tistory.com/9">
-            <img class="linkImg" src="images/item12.png" />
-        </a>
+            <img class="linkImg4" src="images/item12.png" />
+        </a><br />
 		
 		</br>
 		</br>
-		<div class="text">pastel@pastelgamedev.com</div>
+		</br>
+		</br>
+		</br>
+		<div class="text">pastel.team.official@gmail.com</div>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
     </div>
 </body>
 
