별빛바다 키우기 링크 추가

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
     <img id="logo" src="images/PastelLogo.png" />
 
     <div id="wrap">
+		<div class="links">
+            <img class="linkImg" src="images/item19.png" /><img class="linkImg3" src="images/item20.png" />
+			<br /><br />
+			<a class="linkicon" href="https://play.google.com/store/apps/details?id=com.PASTEL.StarlightSeaIdle"><img class="linkImg" src="images/google-play-badge.png" /></a>
+			<a class="linkicon" href="https://apps.apple.com/kr/app/%EB%B3%84%EB%B9%9B%EB%B0%94%EB%8B%A4-%ED%82%A4%EC%9A%B0%EA%B8%B0/id6462403806"><img class="appstoreicon" src="images/appstore.png" /></a>
+			<br /><br />
+        </div><br />
+	
 		<a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.catmergepuzzle">
             <img class="linkImg" src="images/item17.png" /><img class="linkImg3" src="images/item18.jpg" />
         </a><br />
