별빛바다 푸드트럭 추가

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 
     <div id="wrap">
 		<div class="links">
+            <img class="linkImg" src="images/item21.png" /><img class="linkImg3" src="images/item22.jpg" />
+			<br /><br />
+			<a class="linkicon" href="https://play.google.com/store/apps/details?id=com.PASTEL.starryseafoodtruck"><img class="linkImg" src="images/google-play-badge.png" /></a>
+			<a class="linkicon" href="https://apps.apple.com/kr/app/%EB%B3%84%EB%B9%9B%EB%B0%94%EB%8B%A4-%ED%91%B8%EB%93%9C%ED%8A%B8%EB%9F%AD/id6748990337"><img class="appstoreicon" src="images/appstore.png" /></a>
+			<br /><br />
+        </div><br />
+	
+		<div class="links">
             <img class="linkImg" src="images/item19.png" /><img class="linkImg3" src="images/item20.png" />
 			<br /><br />
 			<a class="linkicon" href="https://play.google.com/store/apps/details?id=com.PASTEL.StarlightSeaIdle"><img class="linkImg" src="images/google-play-badge.png" /></a>
@@ -34,37 +42,6 @@
             <img class="linkImg" src="images/item17.png" /><img class="linkImg3" src="images/item18.jpg" />
         </a><br />
 		
-        <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.minime">
-            <img class="linkImg" src="images/item1.jpg" /><img class="linkImg3" src="images/item2.jpg" />
-        </a><br />
-
-        <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.zombieroom">
-            <img class="linkImg" src="images/item3.jpg" /><img class="linkImg3" src="images/item4.jpg" />
-        </a><br />
-
-        <a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.StarlightSeaStreetStall">
-            <img class="linkImg" src="images/item5.jpg" /><div class="linksChildWrap">
-                <img class="linkImg2" src="images/item6.jpg" /><img class="linkImg2" src="images/item7.jpg" /><img class="linkImg2" src="images/item8.jpg" />
-            </div>
-        </a><br />
-		
-		<a class="links" href="https://play.google.com/store/apps/details?id=com.PASTEL.UndergroundDungeon">
-            <img class="linkImg" src="images/item13.jpg" /><div class="linksChildWrap">
-                <img class="linkImg2" src="images/item14.jpg" /><img class="linkImg2" src="images/item15.jpg" /><img class="linkImg2" src="images/item16.jpg" />
-            </div>
-        </a><br />
-
-        <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.star_pook">
-            <img class="linkImg4" src="images/item9.jpg" />
-        </a><br />
-
-        <a class="links" href="https://play.google.com/store/apps/details?id=com.pastel.dalpook">
-            <img class="linkImg" src="images/item10.png" /><img class="linkImg3" src="images/item11.png" />
-        </a><br />
-
-        <a class="links" href="https://gg-i-dont-know.tistory.com/9">
-            <img class="linkImg4" src="images/item12.png" />
-        </a><br />
 		
 		</br>
 		</br>
